# argyaml

./: .gitignore  LICENSE  README.md  pyproject.toml
argyaml/: __main__.py  base.py
argyaml/handlers/: _generate.py
